@@ -691,7 +691,7 @@ std::unique_ptr<ExecutionPlan> Query::preparePlan() {
   enterState(QueryExecutionState::ValueType::PLAN_OPTIMIZATION);
   Optimizer opt(*_resourceMonitor, _queryOptions.maxNumberOfPlans);
   // get enabled/disabled rules
-  opt.createPlans(std::move(plan), _queryOptions, false);
+  opt.createPlans(std::move(plan), _queryOptions);
   // Now plan and all derived plans belong to the optimizer
   plan = opt.stealBest();  // Now we own the best one again
 
@@ -1473,7 +1473,7 @@ QueryResult Query::explain() {
     enterState(QueryExecutionState::ValueType::PLAN_OPTIMIZATION);
     Optimizer opt(*_resourceMonitor, _queryOptions.maxNumberOfPlans);
     // get enabled/disabled rules
-    opt.createPlans(std::move(plan), _queryOptions, true);
+    opt.createPlans(std::move(plan), _queryOptions);
 
     enterState(QueryExecutionState::ValueType::FINALIZATION);
 
