@@ -1,6 +1,10 @@
 devel
 -----
 
+* Fix BTS-2268: Fixed an issue where query plan for queries with subquery
+  is causing a crash when being stored in query plan cache. The issue
+  is a missing invalidateCost from the splice-subqueries rule.
+
 * FE-905: Update tooltip text for maxSkewThreshold  & minDeletionRatio. 
 
 * COR-45: Added support for index hints in vector search queries.
